Redefinition of compiled method fails with assertion "Can not load classes with the Compiler thread"

XMLWordPrintable

    • b02
    • generic
    • generic
    • Verified

        Redefinition of compiled method fails with assertion "Can not load classes with the Compiler thread" when running with fastdebug jvm:

        # An unexpected error has been detected by Java Runtime Environment:
        #
        # Internal Error (/BUILD_AREA/jdk6_11/hotspot/src/share/vm/classfile/systemDictionary.cpp:211), pid=16154
        , tid=7
        # Error: assert(!__the_thread__->is_Compiler_thread(),"Can not load classes with the Compiler thread")
        #
        # Java VM: Java HotSpot(TM) Client VM (11.0-b15-fastdebug mixed mode solaris-sparc)
        nsk.jvmti.scenarios.hotswap.HS203.hs203t004.hs203t004
        nsk/jvmti/scenarios/hotswap/HS203/hs203t004
        Added here in the hope that the nightly failures summary will classify this
        correctly as a (long) known failure, rather than as sometimes seems to happen
        as a new failure.

        # Internal Error (/tmp/jprt/P1/B/185041.ysr/source/src/share/vm/classfile/systemDictionary.cpp:164), pid=8408, tid=11
        # assert(!THREAD->is_Compiler_thread()) failed: Can not load classes with the Compiler thread
        #
        # JRE version: 7.0
        # Java VM: OpenJDK 64-Bit Server VM (20.0-b02-201011111850.ysr.assert-fastdebug mixed mode solaris-sparc compressed oops)

              Assignee:
              Keith Mcguigan (Inactive)
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: