6766644: Redefinition of compiled method fails with assertion "Can not load classes with the Compiler thread"

Defer posting events from the compiler thread: use service thread

Reviewed-by: coleenp, dholmes, never, dcubed